err/isotoma.recipe.zope2instance.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/isotoma'...
Listing './lib/python3.5/site-packages/isotoma/recipe'...
Listing './lib/python3.5/site-packages/isotoma/recipe/zope2instance'...
Compiling './lib/python3.5/site-packages/isotoma/recipe/zope2instance/ctl.py'...
***   File "./lib/python3.5/site-packages/isotoma/recipe/zope2instance/ctl.py", line 60
    print " ".join(command)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/isotoma/recipe/zope2instance/filestorage.py'...
***   File "./lib/python3.5/site-packages/isotoma/recipe/zope2instance/filestorage.py", line 26
    raise UserError, '[isotoma.recipe.zope2instance:filestorage] "%s" part specifies nonexistant zeo part "%s".' % (name, self.zeo_part)
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/isotoma/recipe/zope2instance/tests'...
Listing './lib/python3.5/site-packages/isotoma.recipe.zope2instance-0.0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/buildout'...
Listing './lib/python3.5/site-packages/zc/recipe'...
Listing './lib/python3.5/site-packages/zc/recipe/egg'...
Listing './lib/python3.5/site-packages/zc.buildout-2.10.0.dist-info'...
Listing './lib/python3.5/site-packages/zc.recipe.egg-2.0.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
